tests/baselines/reference/S7.8.4_A1.1_T1.errors.txt
S7.8.4_A1.1_T1.ts(17,3): error TS1005: ';' expected.
S7.8.4_A1.1_T1.ts(17,4): error TS1002: Unterminated string literal.


==== S7.8.4_A1.1_T1.ts (2 errors) ====
    // Copyright 2009 the Sputnik authors.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    info: "StringLiteral :: \"DoubleStringCharacters_opt\""
    es5id: 7.8.4_A1.1_T1
    description: >
        DoubleStringCharacter :: SourceCharacter but not double-quote " or
        LineTerminator
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    //CHECK#1
    """
      ~
!!! error TS1005: ';' expected.
       
!!! error TS1002: Unterminated string literal.
    